hphp/test/zend/bad/ext/pdo_mysql/tests/pdo_mysql_stmt_fetchobject.php.skipif
<?php
require_once(dirname(__FILE__) . DIRECTORY_SEPARATOR . 'skipif.inc');
require_once(dirname(__FILE__) . DIRECTORY_SEPARATOR . 'mysql_pdo_test.inc');
MySQLPDOTest::skip();
$db = MySQLPDOTest::factory();

try {
	$query = "SELECT '', NULL, \"\" FROM DUAL";
	$stmt = $db->prepare($query);
	$ok = @$stmt->execute();
} catch (PDOException $e) {
	die("skip: Test cannot be run with SQL mode ANSI");
}
if (!$ok)
	die("skip: Test cannot be run with SQL mode ANSI");
?>